# vox_verse

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flow.mermaid
signaling/: Cargo.toml
signaling/src/: main.rs
signaling/src/app/: mod.rs
signaling/src/serv/: call_handler.rs  client_handler.rs  events.rs  mngr.rs  mod.rs  msg_pass.rs  msgs.rs  rtc_server.rs  server_mngr.rs  structs.rs  ws_handler.rs
src/: lib.rs
src/server/: mod.rs
src/server/rtc/: rtc_client.rs  traits.rs
src/server/ws_cli/: mod.rs
vox-web/: package-lock.json  package.json
vox-web/src/: App.tsx
vox-web/src/components/: VideoChat.tsx
vox-web/src/services/: WebRTCService.ts
vox-web/src/types/: types.ts
vox_phone/: README.md  pubspec.yaml
vox_phone/android/app/: build.gradle
vox_phone/ios/Runner/: Info.plist
vox_phone/ios/Runner.xcodeproj/: project.pbxproj
vox_phone/lib/: main.dart
vox_phone/lib/services/: webrtc_services.dart
vox_phone/linux/: CMakeLists.txt
vox_phone/linux/runner/: my_application.cc
vox_phone/macos/Runner.xcodeproj/: project.pbxproj
vox_phone/test/: widget_test.dart
vox_phone/web/: index.html  manifest.json
vox_phone/windows/: CMakeLists.txt
vox_phone/windows/runner/: Runner.rc  main.cpp
vox_server/: Cargo.toml
vox_server/src/: lib.rs
vox_server/src/audio_processor/: asr_processor.rs  biz_processor.rs  mod.rs
vox_server/src/bot/: bot.rs  mod.rs
vox_server/src/config/: mod.rs
vox_server/src/msg_center/: mod.rs  msg_bus.rs  signaling_msgs.rs
vox_server/src/pipeline/: file_sink.rs  mod.rs  vad_asr.rs
vox_server/src/server/: mod.rs
vox_server/src/server/data/: mod.rs
vox_server/src/server/rtc/: audio_processor.rs  en_decoder.rs  mod.rs  rtc_client.rs  rtc_delegate.rs  traits.rs
vox_server/src/server/signal_cli/: mod.rs  msgs.rs
vox_server/src/server/ws_cli/: mod.rs  struct.rs
vox_server/src/utils/: config.rs  log.rs
(+5 files in other folders)
