[package]
name = "signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.7", features = ["ws"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5"
xid = "1.1"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
