[package]
name = "vox_verse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
url = "2.5"
futures-util = "0.3"
tungstenite = "0.24"
webrtc = "0.11.0"
chrono = "0.4"
uuid = {version = "1.11", features = ["v4", "fast-rng"]}
anyhow = "1.0"
audiopus = "0.2.0"
notify = "7.0.0"
config = "0.14.1"
once_cell = "1.20.2"
slog = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
lazy_static = "1.5.0"
xid = "1.1.1"
